1998-01-03  Jim Blandy  <jimb@totoro.red-bean.com>

	* iselect.h: Some systems require <sys/types.h> to get the FD_SET
	macro definitions.

	* gc.c, tags.h: Doc fixes.

1998-01-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c (macro-eval!): Removed.  This function was a design bug.
	It allowed memoized code to leak out to the scheme level.  Most
	things that you could do with `macro-eval!' can be done with
	`local-eval'.

1997-12-20  Tim Pierce  <twp@skepsis.com>

	* fports.c (scm_pipob): Use scm_generic_fgets for line i/o, since
	scm_fgets now depends on ftell(3) to know how many bytes were
	read.  Sigh.

1997-12-15  Tim Pierce  <twp@skepsis.com>

	* gh_data.c (gh_scm2newstr, gh_get_substr): Use RO macros for
	dealing with strings.

1997-12-13  Tim Pierce  <twp@skepsis.com>

	Make %read-line more suitable for implementing read-line efficiently.
	* ioext.c (scm_read_line): Strip the terminating newline from a
	string, and return a cons of the string and its terminator.

	* fports.c, fports.h (scm_fgets): Add `len' argument.  The length
	of the string that is read is stored in this memory location.
	* ports.c, ports.h (scm_generic_fgets, fgets_void_port): Same.
	* genio.c, genio.h (scm_do_read_line): Update caller.
	* ports.h (scm_ptobfuns): Update typedef.
	* fports.c (scm_fptob, scm_pipob): Update struct.

1997-12-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* filesys.c (set_element): Return file descriptor.
	(fill_select_type): Return the highest file descriptor.
	(scm_select): Tell select about the highest file descriptor.  On
	some systems the SELECT_SET_SIZE can be as much as 128 bytes.
	Therefore the extra overhead for calculating the maximum fd seems
	to be more than compensated.  Is this correct?  In any case,
	scm_internal_select will be much faster with this info.
	(scm_select, fill_select_type, set_element): Don't accept any kind
	of object in the file descriptor list or vector.

1997-12-07  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
